tests/sema/veo/98_error_return_nil_from_int_func.veo
// expected-error@+1: not all control paths return a value
func get_ptr_fallback(): i32 {
    // expected-error@+1: cannot assign 'nil' to a non-pointer type 'i32'
    return nil;
}
